Cluster button spacing fixes

--- a/src/tiles/cluster/cluster.scss
+++ b/src/tiles/cluster/cluster.scss
@@ -37,7 +37,7 @@
           }
         }
         @include xl(){
-          padding:24px 50px 24px 16px;
+          padding:16px 50px 16px 16px;
           line-height: 14px;
         }
       }
